Enabled preview features in Java compilation